# tuatara

./: .clang-format  .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  README.md  debug_build.sh  main.cpp  release_build.sh  run_resume_example.sh  setup.sh  tuatara.cpp  tuatara.h  utils.cpp  utils.h
bindings/: CMakeLists.txt  python.cpp  run_ocr.py
examples/: CMakeLists.txt  resume.cpp  table.cpp
quants/: .gitignore  parseq.py  parseq_quant.py  requirements.txt
